[package]
name = "surrealdb_c"
version = "0.1.0"
edition = "2021"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "WebAssembly driver for SurrealDB"
repository = "https://github.com/surrealdb/surrealdb.wasm"
license = "Apache License 2.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v2.4.1", features = [
    "kv-surrealkv",
    "kv-mem",
    "http",
] }
surrealdb-core = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v2.4.1", features = [
    "http",
] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.19.0"
futures = "0.3.31"
libc = "0.2.172"
chrono = "0.4.43"
async-channel = "2.5.0"
ciborium = "0.2.2"
arc-swap = "1.8.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
geo-types = "0.7.18"

[build-dependencies]
cbindgen = "0.29.2"
